--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -7,23 +7,26 @@ a {
 }
 
 a:hover {
-  color: darkred;
+  color: #4c88e7;
 }
+
+body {
+  font-family: "Helvetica" , sans-serif;
+  background-color: #1b2828;
+}
+
+/* NAVIGATION */
 
 header {
   display: flex;
   flex-direction: row;
   align-content: center;
-  outline: 1px grey solid;
+  /*outline: 1px grey solid;*/
   height: 69px;
-}
+  /* background-color: dimgrey;
+  opacity: .5; */
 
-body {
-  font-family: "Helvetica" , sans-serif;
-  background-color: black;
 }
-
-/* NAVIGATION */
 
 header img {
  padding-left: 10px;
@@ -47,3 +50,5 @@ nav span {
   padding: 0px 30px;
   float: right;
 }
+
+/*BODY*/
