--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -1,7 +1,7 @@
 /* UNIVERSAL STYLES */
 
 a {
-  color: white;
+  color: seashell;
   font-size: 17px;
   text-decoration: none;
 }
@@ -12,15 +12,29 @@ a:hover {
 
 body {
   font-family: "Helvetica" , sans-serif;
+  font-size: 22px;
   background-color: #1b2828;
+  height: 3000px;
 }
 
+h2 {
+  padding-top: 0px;
+}
+
+h4 {
+  margin-bottom: 10px;
+}
 /* NAVIGATION */
 
 header {
+  z-index: 2;
+  width: 80%;
+  position: fixed;
   display: flex;
   flex-direction: row;
   align-content: center;
+  background-color: #1b2828;
+  border-bottom: 1px solid seashell;
   /*outline: 1px grey solid;*/
   height: 69px;
   /* background-color: dimgrey;
@@ -35,6 +49,7 @@ header img {
 }
 
 nav {
+
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -52,3 +67,25 @@ nav span {
 }
 
 /*BODY*/
+
+.container1 {
+  z-index: 0;
+  width: 1200px;
+  height: 700px;
+}
+
+.heroimage {
+  padding-top: 69px;
+}
+
+#titlebar {
+  position: relative;
+  bottom: 450px;
+  z-index: 1;
+  height: 100px;
+  width: 1200px;
+  color: white;
+  text-align: center;
+  /*border: 1px red solid;*/
+  background-color: #1b2828;
+}
